pushing email fix to dev

--- a/public/assets/scss/global.scss
+++ b/public/assets/scss/global.scss
@@ -83,9 +83,14 @@ body {
   height: 'auto';
 }
 
+input {
+  outline:none;
+}
+
 .inputNormal {
   background-color: rgba(255,255,255,0.1);
   border: 0;
+  outline: 0;
   border-radius:0;
   width: 150px;
   height: 30px;
@@ -94,6 +99,11 @@ body {
   color: rgba(255,255,255,0.9);
   font-family: HelveticaNeue-Light;
   font-size: 13px;
+  &:focus {
+    outline: none;
+    outline-width: 0;
+
+  }
 }
 
 /* =Reset default browser CSS. Based on work by Eric Meyer: http://meyerweb.com/eric/tools/css/reset/index.html
