--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -23,23 +23,18 @@
   }
 
   .pigeonEmoji {
-    background: purple;
-    border:0;
-    box-shadow:0;
-    outline:0;
     padding:0;
     font-size: 100px;
-    width: 0px;
-    height: 0px;
     position: absolute;
     right: 0;
     top: 0;
-    right: 78px;
-    top: -17px;
+    right: -13px;
+    top: 0;
     cursor: pointer;
+    width: 90px;
   }
 
-  .pigeonEmoji:before {
-    content: "\01F426";
-  }
+  // .pigeonEmoji:before {
+  //   content: "\01F426";
+  // }
 }
