--- a/src/components/Homepage/Homepage.scss
+++ b/src/components/Homepage/Homepage.scss
@@ -1,13 +1,15 @@
 @import "~assets/scss/vars.scss";
 
 .homepageContainer {
-  margin-bottom: -57px;
+  .video {
 
+  }
   .endVideo {
     overflow: hidden;
     height: calc(100vh + 50px);
     width: 100%;
-    margin-bottom: -57px;
+    margin-bottom: -50px;
+    margin-top: -25px;
   }
 
   .startVideo {
@@ -15,6 +17,7 @@
     height: calc(100vh + 50px);
     width: 100%;
     margin-bottom: -50px;
+    margin-top: -25px;
   }
 
   .overlayNoPause {
