--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,21 +1,49 @@
 @import "~assets/scss/vars.scss";
 
-.navbarContainer {
-  height: 57px;
+#success-navbar.navbarContainer  {
+  background-color: transparent;
+  justify-content: flex-start;
+  cursor: default;
+}
+
+#normal-navbar.navbarContainer {
   background-color: black;
-  display: flex;
   justify-content: space-around;
+  cursor: default;
+}
+
+.navbarContainer {
+  height: 70px;
+  // background-color: black;
+  display: flex;
   position: relative;
   overflow: hidden;
   align-items: center;
   z-index: 100;
 
   .logo {
-    line-height: 57px;
-    font-size: 32px;
+    line-height: 100px;
+    // font-size: 32px;
     color: #AD985E;
     font-weight: 100;
     font-family: 'NewEnglishTowne';
+  }
+
+  #success-logo {
+    font-size: 50px;
+    margin-left: 5%;
+    margin-top: 0.5%;
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none;   /* Chrome/Safari/Opera */
+    -khtml-user-select: none;    /* Konqueror */
+    -moz-user-select: none;      /* Firefox */
+    -ms-user-select: none;       /* Internet Explorer/Edge */
+    user-select: none;
+    cursor: default;
+  }
+
+  #normal-logo {
+    font-size: 37px;
   }
 
   .pigeonEmoji {
@@ -24,7 +52,7 @@
     position: absolute;
     right: 0;
     top: 0;
-    right: -27px;
+    right: -29.5px;
     top: 0;
     cursor: pointer;
     width: 90px;
