--- a/public/assets/scss/global.scss
+++ b/public/assets/scss/global.scss
@@ -50,7 +50,8 @@ body {
   padding: 12px;
   box-shadow: none;
   color: rgba(255,255,255,0.9);
-  font-family: HelveticaNeue-Light;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-weight: 300;
   font-size: 13px;
   // &:focus {
   //   outline: none;
