--- a/src/components/Homepage/Homepage.scss
+++ b/src/components/Homepage/Homepage.scss
@@ -1,18 +1,21 @@
 @import "~assets/scss/vars.scss";
 
-.homepageContainer {
+#homepageContainer {
 
-}
+  .test-screen-gif {
+    min-height: 100%;
+    min-width: 100%;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none;   /* Chrome/Safari/Opera */
+    -khtml-user-select: none;    /* Konqueror */
+    -moz-user-select: none;      /* Firefox */
+    -ms-user-select: none;       /* Internet Explorer/Edge */
+    user-select: none;
+  }
 
-#testScreenGif {
-  min-height:100%;
-  min-width:100%;
-  height:auto;
-  width:auto;
-  position:absolute;
-  top:-100%;
-  bottom:-100%;
-  left:-100%;
-  right:-100%;
-  margin:auto;
 }
